kubernetes/prod/app-prod-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api-container
        image: <your-flask-api-image>:<tag> # Cange line here
        ports:
        - containerPort: 5000
