kubernetes/prod/app-prod-deployment-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-db
  template:
    metadata:
      labels:
        app: redis-db
    spec:
      containers:
      - name: redis-db
        imagePullPolicy: Always
        image: redis:7
        ports:
        - name: http
          containerPort: 6379
