kubernetes/prod/app-prod-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: flask-api-container
	  imagePullPolicy: IfNotPresent
          image: <your-docker-image>:1.0 # Change line here once image is COMPLETE and uploaded to Dockerhub
          ports:
          - containerPort: 5000
	  volumeMounts:
	  - name: redis-data-pvc
	    mountPath: "/data"
	  command: ['sh', '-c', 'python3 worker.py']
      volumes:
      - name: redis-data-pvc
	persistentVolumeClaim:
	  claimName: redis-data-pvc
