kubernetes/prod/app-prod-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
spec:
  selector:
    app: flask-api
  ports:
  - name: flask-api
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
